# ClearLang

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Folder.DotSettings  README.md  conanfile.txt  main.clr  vcpkg.json
.github/instructions/: ClearLang.instructions.md  copilot-instructions.md
.serena/: project.yml
.serena/cache/cpp/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: antlr_label_naming_note.md  automation_update_pipeline_2025-08-27.md  coding_style.md  project_inventory.md  project_inventory_2025-08-27.md  project_inventory_2025-08-30.md  project_inventory_2025-08-31.md  project_inventory_2025-09-02.md  project_inventory_2025-09-07.md  project_inventory_2025-09-15.md  project_inventory_latest.md  project_overview.md  project_overview_2025-08-27.md  project_overview_2025-08-30.md  project_overview_2025-08-31.md  project_overview_2025-09-02.md  project_overview_2025-09-07.md  project_overview_2025-09-15.md  project_overview_latest.md  project_tree_2025-08-26.md  project_tree_2025-08-27.md  project_tree_2025-08-30.md  project_tree_2025-08-31.md  project_tree_2025-09-02.md  project_tree_2025-09-07.md  project_tree_2025-09-15.md  project_tree_latest.md  suggested_commands.md  task_completion_checklist.md
cmake/: ninja_no_platform_toolchain.cmake  wrap_conan_toolchain.cmake
example/deref_ref/: build.clr
example/deref_ref/src/: main.clr
example/print_float_multiple_file/: build.clr
example/print_float_multiple_file/src/: main.clr  test.clr
grammar/: ClearLanguage.g4
scripts/: update_serena_snapshot.ps1
sema_readme/: language_sema_en.md
src/: main.cpp
src/ast/: CLVisitor.cpp
src/commands/: BuildCommand.cpp  BuildCommand.h
src/core/: BuildDSL.h  CLType.h  SemaUtils.h
src/error/: ErrUtils.h
src/helper/: ValueBuilder.cpp  ValueBuilder.h
src/ir/: IRGenFromSema.cpp  IRGenFromSema.h  IRGenVisitor.cpp  IRGenVisitor.h
src/llvm/: Executer.cpp  Executer.h
src/runtime/: aot_entry_main.cpp  host_runtime.cpp
src/sema/: SemaBuilder.cpp  SemaBuilder.h  SemaIR.h
